Optimized for mobile, added gifs in cart, Enhanced scrolling experience....

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" href="/images/logo.png" type="image/png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Chizel — Play That Builds Brains</title>
+    <meta name="description" content="CHIZEL turns screen time into smart time with gamified learning, AI companions, adaptive growth maps, and a safe global community." />
+    <meta name="theme-color" content="#0b1226" />
+    <link rel="canonical" href="https://www.chizel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Chizel — Play That Builds Brains" />
+    <meta property="og:description" content="Turn screen time into a growth engine. Memory, logic, focus, and social confidence — made playful." />
+    <meta property="og:image" content="/images/app-image.webp" />
+    <meta property="og:url" content="https://www.chizel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Chizel — Play That Builds Brains" />
+    <meta name="twitter:description" content="Play becomes purpose. Learning becomes an adventure." />
+    <meta name="twitter:image" content="/images/app-image.webp" />
   </head>
   <body>
     <div id="root"></div>
