updated favicon and title in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Chizel — Play That Builds Brains</title>
+    <title>Chizel — Turning Screen Time Into Skill Time </title>
     <meta name="description" content="CHIZEL turns screen time into smart time with gamified learning, AI companions, adaptive growth maps, and a safe global community." />
     <meta name="theme-color" content="#0b1226" />
     <link rel="canonical" href="https://www.chizel.app/" />
