updated problem statement page with gifs

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       "@type": "WebApplication",
       "name": "Chizel",
       "description": "Educational gaming platform that turns screen time into skill time",
-      "url": "https://www.chizel.app/",
+      "url": "https://www.chizel.in/",
       "applicationCategory": "EducationalApplication",
       "operatingSystem": "iOS, Android",
       "offers": {
@@ -67,7 +67,7 @@
       "publisher": {
         "@type": "Organization",
         "name": "Chizel",
-        "url": "https://www.chizel.app/"
+        "url": "https://www.chizel.in/"
       }
     }
     </script>
