--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     
     <!-- Favicon and App Icons -->
-    <link rel="icon" href="public/images/logo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="public/images/logo.png" />
+    <link rel="icon" href="/images/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/logo.png" />
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Preconnect and DNS Prefetch for Performance -->
